--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
     <android.support.design.widget.TextInputLayout
             android:id="@+id/tilUserName"
             android:layout_width="match_parent"
@@ -73,5 +83,6 @@
             android:layout_marginTop="16dp"
             android:text="@string/sign_up"
             app:layout_constraintTop_toBottomOf="@id/btnSignIn"/>
+
 
 </android.support.constraint.ConstraintLayout>
