--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,17 +8,15 @@
         tools:context=".SettingActivity">
 
 
-    <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/skRadius"
-             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
-             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
-
-
-    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/skRadius" android:layout_marginTop="24dp"
-            android:text="@string/save"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
+    <fragment
+            android:id="@+id/activity_place_map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".TrackerDashboardWithMenu" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
