--- a/app/src/main/res/menu/activity_tracker_dashboard_with_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_tracker_dashboard_with_menu_drawer.xml
@@ -14,7 +14,7 @@
         <item
                 android:id="@+id/nav_manage"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="Setting"/>
+                android:title="Change to driver mode"/>
 
 
     </group>
