--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -92,6 +92,19 @@
 
     </android.support.design.widget.TextInputLayout>
 
+
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/lblSelect"
+              android:textColor="@android:color/black"
+              android:padding="7dp"
+              android:gravity="center_vertical"
+              android:textSize="22sp"
+              android:text="@string/select_bus"
+              app:layout_constraintTop_toBottomOf="@id/tilPassword" android:layout_marginTop="16dp"
+              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
+
     <Button
             android:id="@+id/btnSignUp"
             android:layout_width="match_parent"
@@ -102,6 +115,6 @@
             android:text="@string/save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tilPassword"/>
+            app:layout_constraintTop_toBottomOf="@id/lblSelect"/>
 
 </android.support.constraint.ConstraintLayout>
