--- a/app/src/main/res/layout/content_tracker_dashboard_with_menu.xml
+++ b/app/src/main/res/layout/content_tracker_dashboard_with_menu.xml
@@ -14,8 +14,17 @@
             android:id="@+id/activity_place_map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
+
             android:layout_height="match_parent"
             tools:context=".TrackerDashboardWithMenu"/>
+
+
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/lblEsti"
+              app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+              android:gravity="center_horizontal" android:textColor="@color/colorAccent"
+              android:textSize="21sp"
+              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
